--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
             <div class="row mb-2">
                 <label for="Website" class="col-sm-5 col-form-label text-end"><b>Personal Website:</b></label>
                 <div class="col-sm-6">
-                    <input type="link" class="form-control" id="Website" required>
+                    <input type="text" class="form-control" id="Website" required>
                 </div>
             </div>
 
             <div class="row mb-2">
                 <label for="Research" class="col-sm-5 col-form-label text-end"><b>Research Gate:</b></label>
                 <div class="col-sm-6">
-                    <input type="link" class="form-control" id="Research" required>
+                    <input type="text" class="form-control" id="Research" required>
                 </div>
             </div>
 
             <div class="row mb-2">
                 <label for="Linked" class="col-sm-5 col-form-label text-end"><b>Linked In:</b></label>
                 <div class="col-sm-6">
-                    <input type="link" class="form-control" id="Linked" required>
+                    <input type="text" class="form-control" id="Linked" required>
                 </div>
             </div>
 
             <div class="row mb-2">
                 <label for="Facebook" class="col-sm-5 col-form-label text-end"><b>Facebook / Twitter:</b></label>
                 <div class="col-sm-6">
-                    <input type="link" class="form-control" id="Facebook" required>
+                    <input type="text" class="form-control" id="Facebook" required>
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
                 <div class="row mb-2">
                     <label for="Areas" class="col-sm-5 col-form-label text-end"><b>Areas:</b></label>
                     <div class="col-sm-6">
-                        <input type="link" class="form-control" id="Areas" required>
+                        <input type="text" class="form-control" id="Areas" required>
                     </div>
                 </div>
             </div>
@@ -113,21 +113,21 @@
             <div class="row mb-2">
                 <label for="PhD" class="col-sm-5 col-form-label text-end"><b>PhD Thesis:</b></label>
                 <div class="col-sm-6">
-                    <input type="link" class="form-control" id="PhD" required>
+                    <input type="text" class="form-control" id="PhD" required>
                 </div>
             </div>
 
             <div class="row mb-2">
                 <label for="M.TECH" class="col-sm-5 col-form-label text-end"><b>M.TECH Thesis:</b></label>
                 <div class="col-sm-6">
-                    <input type="link" class="form-control" id="M.TECH" required>
+                    <input type="text" class="form-control" id="M.TECH" required>
                 </div>
             </div>
 
             <div class="row mb-2">
                 <label for="B.TECH" class="col-sm-5 col-form-label text-end"><b>B.TECH Thesis:</b></label>
                 <div class="col-sm-6">
-                    <input type="link" class="form-control" id="B.TECH" required>
+                    <input type="text" class="form-control" id="B.TECH" required>
                 </div>
             </div>
 
@@ -143,50 +143,50 @@
         <div class="row mb-2">
             <label for="Serial" class="col-sm-5 col-form-label text-end"><b>Serial No.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Serial" required>
+                <input type="text" class="form-control" id="Serial" required>
             </div>
         </div>
 
         <div class="row mb-2">
             <label for="Title" class="col-sm-5 col-form-label text-end"><b>Title of the Project.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Title" required>
+                <input type="text" class="form-control" id="Title" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="Name" class="col-sm-5 col-form-label text-end"><b>Name of the PI.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Name" required>
+                <input type="text" class="form-control" id="Name" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="CoPIs" class="col-sm-5 col-form-label text-end"><b>Name of the CoPIs.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="CoPIs" required>
+                <input type="text" class="form-control" id="CoPIs" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="Funding" class="col-sm-5 col-form-label text-end"><b>Funding Agency.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Funding" required>
+                <input type="text" class="form-control" id="Funding" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="Amount" class="col-sm-5 col-form-label text-end"><b>Amount.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Amount" required>
+                <input type="text" class="form-control" id="Amount" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="Project" class="col-sm-5 col-form-label text-end"><b>Project Type.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Project" required>
+                <input type="text" class="form-control" id="Project" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="Status" class="col-sm-5 col-form-label text-end"><b>Project Status.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Status" required>
+                <input type="text" class="form-control" id="Status" required>
             </div>
         </div>
         <div class="row mb-3">
@@ -195,54 +195,96 @@
         <div class="row mb-2">
             <label for="Serial" class="col-sm-5 col-form-label text-end"><b>Serial No.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Serial" required>
+                <input type="text" class="form-control" id="Serial" required>
             </div>
         </div>
 
         <div class="row mb-2">
             <label for="Title" class="col-sm-5 col-form-label text-end"><b>Title of the Project.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Title" required>
+                <input type="text" class="form-control" id="Title" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="Name" class="col-sm-5 col-form-label text-end"><b>Name of the PI.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Name" required>
+                <input type="text" class="form-control" id="Name" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="CoPIs" class="col-sm-5 col-form-label text-end"><b>Name of the CoPIs.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="CoPIs" required>
+                <input type="text" class="form-control" id="CoPIs" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="Funding" class="col-sm-5 col-form-label text-end"><b>Funding Agency.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Funding" required>
+                <input type="text" class="form-control" id="Funding" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="Amount" class="col-sm-5 col-form-label text-end"><b>Amount.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Amount" required>
+                <input type="text" class="form-control" id="Amount" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="Project" class="col-sm-5 col-form-label text-end"><b>Project Type.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Project" required>
+                <input type="text" class="form-control" id="Project" required>
             </div>
         </div>
         <div class="row mb-2">
             <label for="Status" class="col-sm-5 col-form-label text-end"><b>Project Status.:</b></label>
             <div class="col-sm-6">
-                <input type="link" class="form-control" id="Status" required>
+                <input type="text" class="form-control" id="Status" required>
+            </div>
+        </div>
+
+        <hr class="border border-primary border-3 opacity-75">
+        <div class="row mb-3">
+            <label for="" class="col-sm-4 col-form-label "><b>Publication:</b></label>
+        </div>
+        <div class="row mb-3">
+            <label for="Journal" class="col-sm-4 col-form-label text-end"><b>Journal.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="Journal">
+            </div>
+            <div class="col-sm-2">
+                <input type="date" class="form-control" id="Journal">
+            </div>
+        </div>
+        <div class="row mb-3">
+            <label for="Conference " class="col-sm-4 col-form-label text-end"><b>Conference.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="Conference ">
+            </div>
+            <div class="col-sm-2">
+                <input type="date" class="form-control" id="Conference ">
+            </div>
+        </div>
+        <div class="row mb-3">
+            <label for="Books " class="col-sm-4 col-form-label text-end"><b>Books.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="Books ">
+            </div>
+            <div class="col-sm-2">
+                <input type="date" class="form-control" id="Books ">
+            </div>
+        </div>
+        <div class="row mb-3">
+            <label for="Patents " class="col-sm-4 col-form-label text-end"><b>Patents.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="Patents ">
+            </div>
+            <div class="col-sm-2">
+                <input type="date" class="form-control" id="Patents ">
             </div>
         </div>
     </div>
     
+
     <div class="d-flex p-3 justify-content-center">
             <button class="btn btn-success p-2 m-2" type="submit">Submit</button>
             <button class="btn btn-warning p-2 m-2" type="reset">Reset</button>
