--- a/index.html
+++ b/index.html
@@ -282,8 +282,86 @@
                 <input type="date" class="form-control" id="Patents ">
             </div>
         </div>
+
+
+
+
+        <hr class="border border-primary border-3 opacity-75">
+        <div class="row mb-3">
+            <label for="" class="col-sm-4 col-form-label "><b>Teaching:</b></label>
+        </div>
+        <div class="row mb-3">
+            <label for="" class="col-sm-4 col-form-label text-end"><b>PhD Level.:</b></label>
+        </div>
+        <div class="row mb-2">
+            <label for="Subject" class="col-sm-5 col-form-label text-end"><b>Subject Name.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="Subject" required="">
+            </div>
+        </div>
+        <div class="row mb-2">
+            <label for="Session" class="col-sm-5 col-form-label text-end"><b>Session.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="Session" required="">
+            </div>
+        </div>
+        <div class="row mb-2">
+            <label for="Materials" class="col-sm-5 col-form-label text-end"><b>Learning Materials.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="Materials" required="">
+            </div>
+        </div>
+        <hr>
+        <div class="row mb-3">
+            <label for="" class="col-sm-4 col-form-label text-end"><b>M.Tech Level.:</b></label>
+        </div>
+        <div class="row mb-2">
+            <label for="MSubject" class="col-sm-5 col-form-label text-end"><b>Subject Name.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="MSubject" required="">
+            </div>
+        </div>
+        <div class="row mb-2">
+            <label for="MSession" class="col-sm-5 col-form-label text-end"><b>Session.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="MSession" required="">
+            </div>
+        </div>
+        <div class="row mb-2">
+            <label for="MMaterials" class="col-sm-5 col-form-label text-end"><b>Learning Materials.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="MMaterials" required="">
+            </div>
+        </div>
+        <hr>
+        <div class="row mb-3">
+            <label for="" class="col-sm-4 col-form-label text-end"><b>B.Tech Level.:</b></label>
+        </div>
+        <div class="row mb-2">
+            <label for="BSubject" class="col-sm-5 col-form-label text-end"><b>Subject Name.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="BSubject" required="">
+            </div>
+        </div>
+        <div class="row mb-2">
+            <label for="BSession" class="col-sm-5 col-form-label text-end"><b>Session.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="BSession" required="">
+            </div>
+        </div>
+        <div class="row mb-2">
+            <label for="Materials" class="col-sm-5 col-form-label text-end"><b>Learning Materials.:</b></label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="Materials" required="">
+            </div>
+        </div>
     </div>
-    
+
+
+
+    <hr class="border border-primary border-3 opacity-75">
+
+    </div>
 
     <div class="d-flex p-3 justify-content-center">
             <button class="btn btn-success p-2 m-2" type="submit">Submit</button>
